Add missing hero, info, footer sections

--- a/index.html
+++ b/index.html
@@ -14,21 +14,77 @@
     <title>Learn to Language</title>
   </head>
   <body>
-    <div class="header-container">
-      <div class="header-logo">
-        <img src="images/logo.png" alt="learn to language logo" />
+    <div class="container">
+      <div class="header-container">
+        <div class="header-logo">
+          <img src="images/logo.png" alt="learn to language logo" />
+        </div>
+        <ul class="header-menu">
+          <li class="header-menu-item">
+            <a href="#index">Header Link One</a>
+          </li>
+          <li class="header-menu-item">
+            <a href="#index">Header Link Two</a>
+          </li>
+          <li class="header-menu-item">
+            <a href="#index">Header Link Three</a>
+          </li>
+        </ul>
       </div>
-      <ul class="header-menu">
-        <li class="header-menu-item">
-          <a href="#index">Header Link One</a>
-        </li>
-        <li class="header-menu-item">
-          <a href="#index">Header Link Two</a>
-        </li>
-        <li class="header-menu-item">
-          <a href="#index">Header Link Three</a>
-        </li>
-      </ul>
+      <!-- HERO SECTION-->
+      <div class="hero-container">
+        <div class="hero-container-left">
+          <h4 class="hero-title-text">This website is awesome</h4>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </p>
+          <button>Sign up</button>
+        </div>
+        <div class="hero-image">
+          <img
+            class="image"
+            src="images/girlreading.jpg"
+            alt="girl reading dictionary"
+          />
+        </div>
+      </div>
     </div>
+
+    <!-- Information Section-->
+    <section class="information-section">
+      <div class="information-section-title">Some random information</div>
+      <div class="info-section-container">
+        <div class="info-section">
+          <img src="./images/logo.png" alt=".." />
+          <div class="info-section-text">
+            This is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info-section">
+          <img src="./images/logo.png" alt=".." />
+          <div class="info-section-text">
+            This is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info-section">
+          <img src="./images/logo.png" alt=".." />
+          <div class="info-section-text">
+            This is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info-section">
+          <img src="./images/logo.png" alt=".." />
+          <div class="info-section-text">
+            This is some subtext under an illustration or image
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Footer -->
+    <footer class="footer">
+      <div class="footer-text">Copyright @ The Odin Project 2026</div>
+    </footer>
   </body>
 </html>
