Add testimonial section

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
       <!-- HERO SECTION-->
       <div class="hero-container">
         <div class="hero-container-left">
-          <h4 class="hero-title-text">This website is awesome</h4>
-          <p>
+          <div class="hero-title-text">This website is awesome</div>
+          <div class="hero-description">
             This website has some subtext that goes here under the main title.
             It's a smaller font and the color is lower contrast.
-          </p>
+          </div>
           <button>Sign up</button>
         </div>
         <div class="hero-image">
           <img
             class="image"
-            src="images/girlreading.jpg"
+            src="images/girl.jpg"
             alt="girl reading dictionary"
           />
         </div>
@@ -53,33 +53,43 @@
 
     <!-- Information Section-->
     <section class="information-section">
-      <div class="information-section-title">Some random information</div>
+      <div class="information-section-title">Some random information.</div>
       <div class="info-section-container">
         <div class="info-section">
-          <img src="./images/logo.png" alt=".." />
+          <img src="./images/app.png" alt=".." />
           <div class="info-section-text">
             This is some subtext under an illustration or image
           </div>
         </div>
         <div class="info-section">
-          <img src="./images/logo.png" alt=".." />
+          <img src="./images/community.png" alt=".." />
           <div class="info-section-text">
             This is some subtext under an illustration or image
           </div>
         </div>
         <div class="info-section">
-          <img src="./images/logo.png" alt=".." />
+          <img src="./images/dict.png" alt=".." />
           <div class="info-section-text">
             This is some subtext under an illustration or image
           </div>
         </div>
         <div class="info-section">
-          <img src="./images/logo.png" alt=".." />
+          <img src="./images/flashcards.png" alt=".." />
           <div class="info-section-text">
             This is some subtext under an illustration or image
           </div>
         </div>
       </div>
+    </section>
+
+    <!--Testimonial Section-->
+    <section class="testimonial-container">
+      <div class="quote">
+        Finally, a review site that isn't afraid to point out the flaws in
+        big-name programs. Their 'Honest Take' sections are the first thing I
+        check before buying any new language course.
+      </div>
+      <div class="quote-author">— Marcus T., Polyglot in training</div>
     </section>
 
     <!--Footer -->
