Add CTA section
Add blue border and radius to images in info sect
- in order to make the images stand out more

--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
       <div class="quote-author">— Marcus T., Polyglot in training</div>
     </section>
 
+    <!-- Call to Action Section-->
+    <section class="cta-section-container">
+      <div class="cta-container">
+        <div class="cta-text-left">
+          <div class="cta-title">Call to Action! It's time!</div>
+          <div class="cta-text">
+            Sign up for our product by clicking that button right over there!
+          </div>
+        </div>
+        <button class="cta-button">Sign up</button>
+      </div>
+    </section>
+
     <!--Footer -->
     <footer class="footer">
       <div class="footer-text">Copyright @ The Odin Project 2026</div>
